@@ -3,6 +3,7 @@
 Tue Sep  5 23:04:04 NOVST 2000
 max (patches from Pavel Gulchouk):
 * jam updates (TZUTC kludge processing & more...)
+* get_word() & get_dword() fixes
 
 ----- cvs ci ------
 Mon Sep 04 12:54:10 NOVST 2000
